# onenote-to-tana

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
onenote-to-tana/: convert_to_tif.py
onenote-to-tana/onenote/: convert.py  notebooks.py  onenote.py  pages.py  sections.py
onenote-to-tana/tanatypes/: constant.py  tif.py
onenote-to-tana/utilities/: utils.py
